--- a/entity-page/Backend/package.json
+++ b/entity-page/Backend/package.json
@@ -7,6 +7,7 @@
     "base64-js": "^1.5.1",
     "bson": "^4.6.4",
     "buffer": "^5.7.1",
+    "cors": "^2.8.5",
     "debug": "^4.3.4",
     "denque": "^2.0.1",
     "dotenv": "^16.0.1",
